make sure the top bar and the content are displayed properly even on smaller devices

--- a/src/sass/survey.scss
+++ b/src/sass/survey.scss
@@ -43,11 +43,17 @@ a:focus {
 
 @media screen and (max-width: 480px) {
     .form-header button, .form-header a {
-        padding: 4px;
+        padding: 6px;
         background-color: #e4e4e4;
         border-radius: 4px;
         font-size: 11px;
         margin-left:2px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .main {
+        padding: 60px 0 70px 0 !important;
     }
 }
 
@@ -143,15 +149,18 @@ a:focus {
 .form-header {
     display: none;
     top: 0;
-    height: 75px;
     position: fixed;
     z-index: 1600;
     background-color: #fff;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 8px 16px;
     border-bottom: 1px solid #bbbbbb;
     overflow: hidden;
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    min-height: auto !important;
 }
+
 
 .form-header h3 {
     font-size: 16pt;
